# night-light

./: .buildinfo  .gitignore  10_7_Data_Collection.csv  README.md  SVData2-11.csv  SVDataCollection2-11.csv  calc_slopes.ipynb  edge_detection.ipynb  genindex.html  illuminance_extraction.ipynb  index.html  main.py  objects.inv  pedestrian_detection.py  pedestrian_illuminance.py  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
crosswalks/: crosswalks.py  crosswalks_interactive.py
docs/: requirements.txt
docs/source/: conf.py  (+2 more)
explanations/: brightness_contrast_algorithm.html  contrast_algorithm.html  datasets.html  index.html
guides/: index.html
night_light/: main.py  util_duckdb.py
output/: crosswalk_centers_contrast.parquet  crosswalk_centers_lights.parquet  streetlights.parquet
references/: analyzer.html  index.html  utils.html
test/: conftest.py  test_adt_mapping.py  test_adt_query.py  test_crosswalk_mapping.py  test_crosswalk_query.py  test_mapping.py  test_pedestrian_generators.py
tests/: conftest.py  index.html  test_adt_mapping.html  test_adt_mapping.py  test_adt_query.html  test_adt_query.py  test_boston_traffic_lights_query.py  test_boston_vision_zero_mapping.py  test_boston_vision_zero_query.py  test_crosswalk_mapping.html  test_crosswalk_mapping.py  test_crosswalk_query.html  test_mapping.html  test_mapping.py  test_median_household_income_mapping.py  test_median_household_income_query.py  test_population_density_mapping.py  test_population_density_query.py  test_streetlights_mapping.py  test_streetlights_query.py  (+1 more)
(+76 files in other folders)
