[project]
name = "night-light"
requires-python = ">=3.12"
version = "0.0.1"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.black]
line-length = 88

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

